--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
-    "next": "^15.1.0",
+    "next": "^15.5.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "typescript": "^5.0.0"
   }
 }
